0.7.0 (trunk):
* Add path argument to `Resolv_conf in Dns_resolver.config
* `Dns_resolver.t` is now a record type rather than a first-class module
* Fix mldig server and port options
* Change Zone.load_zone to Zone.load and make it functional over Loader.db
* Use Ipaddr.V4.t addresses in favor to Cstruct or Uri_IP representations
* Fix RRSIG signed type to be of the answer rather than the question
* Fix ANY queries
* Add `Buf` to provide an nickname for char Bigarrays
* Change `Packet.{parse,marshal}` to use Buf.t rather than exposing Cstruct.t
* Change `Packet.parse` to remove name map parameter
* Change `Dns_server.listen` to accept custom `parse` and `marshal` arrows
* Add first-class `PROCESSOR` modules to `Dns_server` for contextual
  protocol extensions

0.6.2 (2012-02-13):
* Fix Lwt compilation after switch to `Dns.Names.Map` instead of `Hashtbl`.
* Fix Lwt Makefile detection (`Lwt.unix` instead of `Lwt.ssl`)

0.6.1 (2012-02-12):
* Improve performance of packet marshalling.
* Add a Mirage `Dns_server` subpackage.

0.6.0 (2012-12-31):
* (Very) experimental DNSSEC support.
* Use cstruct-0.6.0 API.
* Improve robustness of `Dns_resolver`.
* Add EDNS0 support for larger packet sizes.

0.5.2 (2012-11-28):
* Fix the server interface to be fully asynchronous.
* Correct `q_type`/`q_class` arguments being ignored in the Lwt
  Dns_resolver (from Pierre Chambart).

0.5.1 (2012-10-05):
* Remain compatible with OCaml-3.12.1 with the more verbose
  first-class module syntax.

0.5.0 (2012-09-29):
* Add mldig as a full(ish)-featured dig clone, with similar
  output format.
* Add `Dns.Resolvconf` for parsing `/etc/resolv.conf` files on
  POSIX hosts.
* Move the Lwt bits (resolver, server, cmdline client) into
  a separate directory, to follow the Cohttp convention.

0.4.0 (2012-09-18):
* Initial public release.